@@ -37,7 +37,7 @@ public class GEProfiler {
     public static Logger log = Logger.getLogger("profiler");
     private static boolean profilerEnabled = true;
     private static ProfilerEnabledSettingsListerner profilerEnabledSettingsListerner;
-    private static final Long zero = new Long(0);
+    private static final Long zero = Long.valueOf(0);
     private static HashMap<Integer, Long> cmdCounts = new HashMap<Integer, Long>();
     private static HashMap<Integer, Long> primVtypeCounts = new HashMap<Integer, Long>();
     private static HashMap<Integer, String> vtypeNames = new HashMap<Integer, String>();
